--- a/order-app/styles/globals.css
+++ b/order-app/styles/globals.css
@@ -26,4 +26,11 @@ body {
   @apply px-[30px] py-[8px] bg-primary rounded-3xl hover:opacity-70 transition-all ease-in-out  ;
 }
 
+.slick-dots{
+  @apply !flex justify-start w-full
+}
+ .slick-dots .slick-active div{
+  @apply bg-primary rounded-full scale-150
+}
+
 
