--- a/order-app/styles/globals.css
+++ b/order-app/styles/globals.css
@@ -23,7 +23,7 @@ body {
 } */
 
 .btn{
-  @apply px-[30px] py-[8px] bg-primary rounded-3xl hover:opacity-70 transition-all ease-in-out  ;
+  @apply text-white px-[30px] py-[8px] bg-primary rounded-3xl hover:opacity-70 transition-all ease-in-out  ;
 }
 
 .slick-dots{
